# nexigon

./: .cspell.json  .gitignore  .project-words.txt  .rustfmt.toml  .taplo.toml  Cargo.toml  Cross.toml  README.md  SECURITY.md  deny.toml  devenv.nix  devenv.yaml  flake.nix  justfile  nexigon.code-workspace  sandbox.toml
.github/workflows/: pipeline.yml  upload-installer.yml
.mise/: config.toml
api/: openapi.json  redoc-static.html
crates/apps/nexigon-agent/: Cargo.toml  build.rs  sidex.toml
crates/apps/nexigon-agent/schemas/: commands.sidex  config.sidex
crates/apps/nexigon-agent/src/: handlers.rs  lib.rs  local_api.rs  main.rs  run.rs  system_info.rs  terminal.rs
crates/apps/nexigon-agent/src/builtins/: mod.rs  rugix_apps.rs  system.rs  systemd.rs
crates/apps/nexigon-agent/src/config/: mod.rs
crates/apps/nexigon-agent/src/integrations/: mod.rs  rugix_apps.rs
crates/apps/nexigon-cli/: Cargo.toml  sidex.toml
crates/apps/nexigon-cli/schemas/: config.sidex
crates/apps/nexigon-cli/src/: main.rs
crates/apps/nexigon-cli/src/config/: mod.rs
crates/libs/nexigon/: Cargo.toml
crates/libs/nexigon-agent-api/: Cargo.toml  sidex.toml
crates/libs/nexigon-agent-api/schemas/: handshake.sidex
crates/libs/nexigon-agent-api/src/: client.rs  lib.rs
crates/libs/nexigon-api/: Cargo.toml  sidex.toml
crates/libs/nexigon-api/schemas/: actor.sidex  audit.sidex  cluster.sidex  datetime.sidex  devices.sidex  digest.sidex  errors.sidex  fleet.sidex  instance.sidex  jobs.sidex  json.sidex  jwt.sidex  organizations.sidex  outputs.sidex  projects.sidex  properties.sidex  repositories.sidex  resources.sidex  users.sidex  vulnerabilities.sidex
crates/libs/nexigon-api/src/: lib.rs
crates/libs/nexigon-api/src/types/: mod.rs
crates/libs/nexigon-cert/: Cargo.toml
crates/libs/nexigon-cert/examples/: fingerprint-cert.rs  generate-cert.rs
crates/libs/nexigon-cert/src/: lib.rs
crates/libs/nexigon-cert/tests/: test_parsing.rs
crates/libs/nexigon-client/: Cargo.toml
crates/libs/nexigon-client/src/: lib.rs  websocket.rs
crates/libs/nexigon-common/: Cargo.toml
crates/libs/nexigon-common/src/: lib.rs
crates/libs/nexigon-ids/: Cargo.toml
crates/libs/nexigon-ids/examples/: generate-id.rs
crates/libs/nexigon-ids/src/: encoding.rs  lib.rs
crates/libs/nexigon-multiplex/: Cargo.toml
crates/libs/nexigon-multiplex/src/: frames.rs  lib.rs  transport.rs
crates/libs/nexigon-multiplex/tests/: integration.rs
crates/libs/nexigon-rpc/: Cargo.toml
crates/libs/nexigon-rpc/src/: lib.rs
crates/libs/nexigon-version/: Cargo.toml
crates/libs/nexigon-version/src/: lib.rs
crates/utils/nexigon-gen-openapi/: Cargo.toml  schemas.json
crates/utils/nexigon-gen-openapi/docs/: description.md
crates/utils/nexigon-gen-openapi/src/: main.rs
crates/utils/nexigon-gen-py-bindings/: Cargo.toml
crates/utils/nexigon-gen-py-bindings/src/: main.rs
crates/utils/nexigon-gen-ts-bindings/: Cargo.toml
crates/utils/nexigon-gen-ts-bindings/src/: main.rs
installer/: download-cli.sh  install-agent.sh
integrations/: README.md
integrations/power/: README.md
integrations/rugix-apps/: README.md
integrations/rugix-apps/files/: nexigon-rugix-apps  nexigon-rugix-apps-deploy
integrations/rugix-ota/: README.md
integrations/rugix-ota/files/: nexigon-rugix-ota  nexigon-rugix-ota.json  nexigon-rugix-ota.timer
integrations/rugix-watchdog/: README.md
integrations/rugix-watchdog/files/: nexigon-rugix-watchdog  nexigon-rugix-watchdog.conf  nexigon-rugix-watchdog.service
integrations/systemd/: README.md
integrations/systemd/scripts/: nexigon-systemd-list-units  nexigon-systemd-status
packaging/debian/: README.source  control  copyright  rules
schemas/: nexigon-agent.schema.json  nexigon-cli.schema.json
scripts/: build-debs.sh  build-source-package.sh  upload-binaries.sh
sdks/python/: .gitignore  README.md  justfile  mkdocs.yml  pyproject.toml
sdks/python/docs/: index.md
sdks/python/docs/guide/: actions.md  device-commands.md  errors.md  quickstart.md
sdks/python/docs/reference/: client.md  errors.md
sdks/python/docs/reference/types/: actor.md  audit.md  cluster.md  devices.md  fleet.md  instance.md  jobs.md  organizations.md  projects.md  properties.md  repositories.md  users.md
sdks/python/src/nexigon_hub_sdk/: __init__.py  _actions.py  _client.py  _commands.py  _errors.py
sdks/python/src/nexigon_hub_sdk/api_types/: __init__.py  actor.py  audit.py  cluster.py  datetime.py  devices.py  digest.py  errors.py  fleet.py  instance.py  jobs.py  json.py  jwt.py  organizations.py  outputs.py  projects.py  properties.py  repositories.py  users.py  vulnerabilities.py
sdks/python/tests/: test_client.py  test_commands.py
