[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexigon-hub-sdk"
version = "0.0.1"
description = "Nexigon Hub SDK"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.12.5", "httpx>=0.28", "websockets>=13"]

[project.urls]
homepage = "https://github.com/nexigon/nexigon"
repository = "https://github.com/nexigon/nexigon"

[dependency-groups]
dev = ["pytest>=7.0", "pytest-asyncio>=0.24", "mypy>=1.0", "ruff>=0.4"]
docs = [
    "mkdocs-material>=9.6",
    "mkdocstrings[python]>=0.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nexigon_hub_sdk"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
target-version = "py312"
