[package]
name = "nexigon-agent"
edition = "2024"
version = "0.5.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "nexigon-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
futures.workspace = true
nexigon-api.workspace = true
nexigon-cert.workspace = true
nexigon-client.workspace = true
nexigon-common.workspace = true
nexigon-ids.workspace = true
nexigon-multiplex.workspace = true
nexigon-version.workspace = true
reportify.workspace = true
serde.workspace = true
serde_json.workspace = true
si-observability.workspace = true
sidex-serde.workspace = true
sysinfo.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = [
    "fs",
    "term",
    "user",
    "process",
    "signal",
] }
libc = "0.2"
