[package]
name = "nexigon-cli"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
clap.workspace = true
nexigon-client.workspace = true
nexigon-ids.workspace = true
serde.workspace = true
si-observability.workspace = true
sidex-serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
