[package]
name = "nexigon-cli"
edition = "2024"
version = "0.5.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
nexigon-api.workspace = true
nexigon-client.workspace = true
nexigon-ids.workspace = true
nexigon-multiplex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
si-crypto-hashes.workspace = true
si-observability.workspace = true
sidex-serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
