[package]
name = "nexigon-agent-api"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sidex.workspace = true
sidex-serde.workspace = true

[build-dependencies]
sidex-build-rs.workspace = true
