[package]
name = "nexigon-agent-api"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
nexigon-api.workspace = true
nexigon-client.workspace = true
nexigon-rpc.workspace = true
serde.workspace = true
serde_json.workspace = true
sidex.workspace = true
sidex-serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[build-dependencies]
sidex-build-rs.workspace = true
