[package]
name = "nexigon-api"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
jiff.workspace = true
nexigon-cert.workspace = true
nexigon-ids.workspace = true
serde.workspace = true
serde_json.workspace = true
si-crypto-hashes.workspace = true
sidex-serde.workspace = true
