[package]
name = "nexigon-cert"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
rcgen.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
x509-cert.workspace = true
