[package]
name = "nexigon-common"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
nexigon-api.workspace = true
nexigon-client.workspace = true
nexigon-ids.workspace = true
reqwest.workspace = true
serde_json.workspace = true
si-crypto-hashes.workspace = true
tokio.workspace = true
