[package]
name = "nexigon-gen-openapi"
edition = "2024"
authors.workspace = true
version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
indexmap.workspace = true
nexigon-api.workspace = true
serde_json.workspace = true
sidex-types-openapi.workspace = true
